--- a/store/blocks/product/buy-together.jsonc
+++ b/store/blocks/product/buy-together.jsonc
@@ -59,7 +59,9 @@
   "add-to-cart-button#buyTogether": {
     "props": {
       "blockClass": "buyTogether",
-      "text": "Comprar Todos"
+      "text": "Comprar Todos",
+      "addToCartFeedback": "customEvent",
+      "customPixelEventId": "add-to-cart-button"
     }
   }
 }
