--- a/store/blocks/header/searchBar.jsonc
+++ b/store/blocks/header/searchBar.jsonc
@@ -28,6 +28,6 @@
     }
   },
   "autocomplete-result-list.v2": {
-    "blocks": ["product-summary"]
+    "blocks": ["product-summary.shelf#searchbar"]
   }
 }
