--- a/store/blocks/product/product-main-infos.jsonc
+++ b/store/blocks/product/product-main-infos.jsonc
@@ -6,6 +6,7 @@
       "flex-layout.row#pdp-rating-and-whishlist",
       "flex-layout.row#pdp-price-and-installments",
       "condition-layout.product#availability",
+      "flex-layout.row#box_usp",
       "flex-layout.row#cn_promo",
       "flex-layout.row#pdp-product-and-shipping-description"
     ],
@@ -13,6 +14,25 @@
       "blockClass": "product-main-infos",
       "preventVerticalStretch": true,
       "width": "50%"
+    }
+  },
+
+  "flex-layout.row#box_usp": {
+    "title": "box_usp",
+    "children": ["image#box_usp_image"],
+    "props": {
+      "htmlId": "box_usp",
+      "blockClass": "container",
+      "marginBottom": "6",
+      "width": "100%"
+    }
+  },
+  "image#box_usp_image": {
+    "title": "box_usp_image",
+    "props": {
+      "src": "https://bricobravo.vtexassets.com/assets/vtex.file-manager-graphql/images/1d9a218c-d63c-4bdb-9df9-6bb94369e578___ecd3f23d8471c28940271e528da3a83f.png",
+      "maxHeight": 80,
+      "maxWidth": "95%"
     }
   },
 
