--- a/store/blocks/product/product-main-mobile.jsonc
+++ b/store/blocks/product/product-main-mobile.jsonc
@@ -14,6 +14,7 @@
       "flex-layout.row#pdp-rating-mobile",
       "flex-layout.row#pdp-price-and-installments",
       "condition-layout.product#availability",
+      "flex-layout.row#box_usp",
       "flex-layout.row#cn_promo",
       "flex-layout.row#pdp-product-and-shipping-description",
       "flex-layout.row#pdp-quantity-and-add-to-cart-fixed"
