--- a/store/blocks/product/product-summary.jsonc
+++ b/store/blocks/product/product-summary.jsonc
@@ -20,6 +20,17 @@
       "product-location-availability"
     ]
   },
+  "product-summary.shelf#searchbar": {
+    "props": {
+      "blockClass": ["summarySearch"]
+    },
+    "children": [
+      "product-summary-image",
+      "product-summary-name",
+      "product-rating-inline",
+      "product-summary-price"
+    ]
+  },
   "product-location-availability": {
     "props": {
       "maxItems": 3,
@@ -216,7 +227,7 @@
   },
   "product-summary-image": {
     "props": {
-      "showBadge": false,
+      "showBadge": true,
       "width": {
         "desktop": 194,
         "mobile": 194
